# QTI-file-check

./: README.md
Python_qti_file_checker/: qti_file_checker.py
utils/qti_test/: pyproject.toml  setup.cfg
utils/qti_test/src/qtitest/: cli.py  qti_testing.py
