[metadata]
name = qtitest
version = 1.0.0

[options]
# Path to our libary/application
package_dir =
    = src
packages = find:

# Version of Python needed to use the package
python_requires = >=3.8

install_requires =
    fire
    questionary

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qtitest = qtitest.cli:cli
